--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1557821552-17105176677c?w=800&q=80" alt="E-Commerce Platform">
+                        <img src="images/ec.png" alt="E-Commerce Platform">
                         <div class="project-overlay">
                             <button class="btn-icon-preview" data-project="1" aria-label="Preview Project">
                                 <i class="fas fa-eye"></i>
@@ -500,7 +500,7 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=800&q=80" alt="Task Management Dashboard">
+                        <img src="images/image2.png" alt="Task Management Dashboard">
                         <div class="project-overlay">
                             <button class="btn-icon-preview" data-project="2" aria-label="Preview Project">
                                 <i class="fas fa-eye"></i>
@@ -525,7 +525,7 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&q=80" alt="Social Media Analytics">
+                        <img src="images/image3.png" alt="Social Media Analytics">
                         <div class="project-overlay">
                             <button class="btn-icon-preview" data-project="3" aria-label="Preview Project">
                                 <i class="fas fa-eye"></i>
@@ -550,7 +550,7 @@
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=800&q=80" alt="Portfolio Generator">
+                        <img src="images/ai.jpg" alt="Portfolio Generator">
                         <div class="project-overlay">
                             <button class="btn-icon-preview" data-project="4" aria-label="Preview Project">
                                 <i class="fas fa-eye"></i>
@@ -575,7 +575,7 @@
                 <!-- Project 5 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1592210454359-9043f067919b?w=800&q=80" alt="Weather Forecast App">
+                        <img src="images/we.jpg" alt="Weather Forecast App">
                         <div class="project-overlay">
                             <button class="btn-icon-preview" data-project="5" aria-label="Preview Project">
                                 <i class="fas fa-eye"></i>
@@ -600,7 +600,7 @@
                 <!-- Project 6 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=800&q=80" alt="Fitness Tracking Platform">
+                        <img src="images/gym.jpg" alt="Fitness Tracking Platform">
                         <div class="project-overlay">
                             <button class="btn-icon-preview" data-project="6" aria-label="Preview Project">
                                 <i class="fas fa-eye"></i>
@@ -649,7 +649,7 @@
                     <!-- Review 1 -->
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100&q=80" alt="Sarah Johnson" class="reviewer-img">
+                            <img src="images/cl1.jpg" alt="Sarah Johnson" class="reviewer-img">
                             <div class="reviewer-info">
                                 <h4 class="reviewer-name">Sarah Johnson</h4>
                                 <p class="reviewer-role">CEO, TechVision Inc.</p>
@@ -671,9 +671,9 @@
                     <!-- Review 2 -->
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&q=80" alt="Michael Chen" class="reviewer-img">
+                            <img src="images/cl2.jpg" alt="Michael Uche" class="reviewer-img">
                             <div class="reviewer-info">
-                                <h4 class="reviewer-name">Michael Chen</h4>
+                                <h4 class="reviewer-name">Michael Uche</h4>
                                 <p class="reviewer-role">Founder, ShopLocal</p>
                                 <div class="review-stars">
                                     <i class="fas fa-star"></i>
@@ -693,9 +693,9 @@
                     <!-- Review 3 -->
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=100&q=80" alt="Emily Rodriguez" class="reviewer-img">
+                            <img src="images/cl4.jpg" alt="Emily Okon" class="reviewer-img">
                             <div class="reviewer-info">
-                                <h4 class="reviewer-name">Emily Rodriguez</h4>
+                                <h4 class="reviewer-name">Emily Okon</h4>
                                 <p class="reviewer-role">Product Manager, DataFlow</p>
                                 <div class="review-stars">
                                     <i class="fas fa-star"></i>
@@ -715,7 +715,7 @@
                     <!-- Review 4 -->
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=100&q=80" alt="James Williams" class="reviewer-img">
+                            <img src="images/cl3.jpg" alt="James Williams" class="reviewer-img">
                             <div class="reviewer-info">
                                 <h4 class="reviewer-name">James Williams</h4>
                                 <p class="reviewer-role">Director, Creative Studios</p>
@@ -737,7 +737,7 @@
                     <!-- Review 5 -->
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?w=100&q=80" alt="Lisa Anderson" class="reviewer-img">
+                            <img src="images/cl5.jpg" alt="Lisa Anderson" class="reviewer-img">
                             <div class="reviewer-info">
                                 <h4 class="reviewer-name">Lisa Anderson</h4>
                                 <p class="reviewer-role">Co-founder, FitLife App</p>
@@ -759,9 +759,9 @@
                     <!-- Review 6 -->
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&q=80" alt="Robert Taylor" class="reviewer-img">
+                            <img src="images/cl6.jpg" alt="Robert Umoh" class="reviewer-img">
                             <div class="reviewer-info">
-                                <h4 class="reviewer-name">Robert Taylor</h4>
+                                <h4 class="reviewer-name">Robert Umoh</h4>
                                 <p class="reviewer-role">CTO, FinanceHub</p>
                                 <div class="review-stars">
                                     <i class="fas fa-star"></i>
@@ -846,7 +846,7 @@
                                 <i class="fab fa-linkedin-in"></i>
                                 <span>LinkedIn</span>
                             </a>
-                            <a href="https://facebook.com/davidakapn" target="_blank" class="contact-social-link" aria-label="Facebook">
+                            <a href="https://facebook.com/David Akapn" target="_blank" class="contact-social-link" aria-label="Facebook">
                                 <i class="fab fa-facebook-f"></i>
                                 <span>Facebook</span>
                             </a>
