--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </a>
             </div>
             <div class="hero-image">
-                <img src="images/about image.PNG" alt="David Akapn" class="profile-hero-img">
+                <img src="images/WhatsApp Image 2026-02-11 at 6.15.20 AM.jpeg" alt="David Akapn" class="profile-hero-img">
                 <div class="hero-badge-floating badge-1">
                     <i class="fas fa-code"></i>
                     <span>Clean Code</span>
